[project]
name = "code-review-env"
version = "0.1.0"
description = "AI Code Review Environment"
authors = [
    { name = "Prateek Vishwakarma" }
]
dependencies = [
    "openai",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "inference.py"